# Scheduling-Project

./: CMakeLists.txt  ReadMe.md  Scheduling  meson.build  windows-x86_64.txt
include/: AddWindow.h  Employee.h  MyWindow.h  Sector.h  add_button.h  add_window.h  window.h
src/: AddWindow.cpp  Employee.cpp  MyWindow.cpp  Sector.cpp  add_button.cpp  add_window.cpp  employee.cpp  main.cpp  window.cpp
